--- a/js.html
+++ b/js.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR" data-page="js">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VSCode Simulado - JavaScript</title>
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    <!-- Barra superior fixa -->
-    <header class="topbar">
-        <span>Aprenda Web - VSLearn (JavaScript)</span>
-        <button id="menu-toggle">☰</button>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>VSCode Simulado - JavaScript</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <!-- Barra superior fixa -->
+        <header class="topbar">
+            <span>Aprenda Web - VSLearn (JavaScript)</span>
+            <button id="menu-toggle">☰</button>
+        </header>
 
-    <div class="container">
         <!-- Painel lateral: explorador de arquivos -->
         <aside class="sidebar">
             <div class="explorer-title">EXPLORADOR</div>
@@ -87,8 +86,7 @@
             <section id="introducao-js" class="content-section active">
                 <h1>JavaScript: Linguagem de Programação da Web</h1>
                 <p>
-                    JavaScript é a linguagem que adiciona interatividade, lógica e dinamismo às páginas web.  
-                    Ele é executado no navegador e também pode ser usado no servidor (Node.js).
+                    JavaScript é a linguagem que adiciona interatividade, lógica e dinamismo às páginas web. Ele é executado no navegador e também pode ser usado no servidor (Node.js).
                 </p>
                 <hr />
                 <h2>Funções Principais</h2>
@@ -262,13 +260,12 @@ carregarDados();
                 <button onclick="window.location.href='index.html'">← Voltar para Index</button>
             </section>
         </main>
-    </div>
 
-    <!-- Barra inferior -->
-    <footer class="bottombar">
-        <span>Status: Pronto</span>
-    </footer>
+        <!-- Barra inferior -->
+        <footer class="bottombar">
+            <span>Status: Pronto</span>
+        </footer>
 
-    <script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
